src/OpenCvSharpExtern/video.h

CVAPI(int) video_buildOpticalFlowPyramid(
    cv::_InputArray *img, cv::_OutputArray *pyramid,
    CvSize winSize, int maxLevel, int withDerivatives,
    int pyrBorder, int derivBorder, int tryReuseInputImage)
{
    return cv::buildOpticalFlowPyramid(
        *img, *pyramid, winSize, maxLevel, withDerivatives != 0,
        pyrBorder, derivBorder, tryReuseInputImage != 0);
}
CVAPI(void) video_calcOpticalFlowPyrLK_InputArray(
    cv::_InputArray *prevImg, cv::_InputArray *nextImg,
    cv::_InputArray *prevPts, cv::_OutputArray *nextPts,
    cv::_OutputArray *status, cv::_OutputArray *err,
    CvSize winSize, int maxLevel, CvTermCriteria criteria,
    int flags, double minEigThreshold)
{
    cv::calcOpticalFlowPyrLK(*prevImg, *nextImg, *prevPts, *nextPts, *status, *err,
        winSize, maxLevel, criteria, flags, minEigThreshold);
}
CVAPI(void) video_calcOpticalFlowPyrLK_vector(
    cv::_InputArray *prevImg, cv::_InputArray *nextImg,
    cv::Point2f *prevPts, int prevPtsSize,
    std::vector<cv::Point2f> *nextPts,
    std::vector<uchar> *status,
    std::vector<float> *err,
    CvSize winSize, int maxLevel, CvTermCriteria criteria,
    int flags, double minEigThreshold)
{
    std::vector<cv::Point2f> prevPtsVec(prevPts, prevPts + prevPtsSize);
    cv::calcOpticalFlowPyrLK(*prevImg, *nextImg, prevPtsVec, *nextPts, 
        *status, *err, winSize, maxLevel, criteria, flags, minEigThreshold);
}
CVAPI(void) video_calcOpticalFlowFarneback(
    cv::_InputArray *prev, cv::_InputArray *next,
    cv::_OutputArray *flow, double pyrScale, int levels, int winSize,
    int iterations, int polyN, double polySigma, int flags)
{
    cv::calcOpticalFlowFarneback(*prev, *next, *flow, pyrScale, levels, winSize,
        iterations, polyN, polySigma, flags);
}
CVAPI(cv::Mat*) video_estimateRigidTransform(
    cv::_InputArray *src, cv::_InputArray *dst, int fullAffine)
{
    cv::Mat ret = cv::estimateRigidTransform(*src, *dst, fullAffine != 0);
    return new cv::Mat(ret);
}
CVAPI(void) video_calcOpticalFlowSF1(
    cv::Mat *from,
    cv::Mat *to,
    cv::Mat *flow,
    int layers,
    int averagingBlockSize,
    int maxFlow)
{
    cv::calcOpticalFlowSF(*from, *to, *flow, layers, averagingBlockSize, maxFlow);
}
CVAPI(void) video_calcOpticalFlowSF2(
    cv::Mat *from,
    cv::Mat *to,
    cv::Mat *flow,
    int layers,
    int averagingBlockSize,
    int maxFlow,
    double sigmaDist,
    double sigmaColor,
    int postprocessWindow,
    double sigmaDistFix,
    double sigmaColorFix,
    double occThr,
    int upscaleAveragingRadius,
    double upscaleSigmaDist,
    double upscaleSigmaColor,
    double speedUpThr)
{
    cv::calcOpticalFlowSF(*from, *to, *flow, layers, averagingBlockSize, maxFlow,
        sigmaDist, sigmaColor, postprocessWindow, sigmaDistFix, sigmaColorFix,
        occThr, upscaleAveragingRadius, upscaleSigmaDist, upscaleSigmaColor, speedUpThr);
}
CVAPI(void) video_DenseOpticalFlow_calc(
    cv::DenseOpticalFlow *obj,
    cv::_InputArray *i0, cv::_InputArray *i1, cv::_OutputArray *flow)
{
    obj->calc(*i0, *i1, *flow);
}
CVAPI(void) video_DenseOpticalFlow_collectGarbage(cv::DenseOpticalFlow *obj)
{
    obj->collectGarbage();
}
CVAPI(cv::AlgorithmInfo*) video_DenseOpticalFlow_info(cv::DenseOpticalFlow *obj)
{
    return obj->info();
}
CVAPI(cv::Ptr<cv::DenseOpticalFlow>*) video_createOptFlow_DualTVL1()
{
    return clone( cv::createOptFlow_DualTVL1() );
}
CVAPI(cv::DenseOpticalFlow*) video_Ptr_DenseOpticalFlow_obj(cv::Ptr<cv::DenseOpticalFlow> *ptr)
{
    return ptr->obj;
}
CVAPI(void) video_Ptr_DenseOpticalFlow_delete(cv::Ptr<cv::DenseOpticalFlow> *ptr)
{
    delete ptr;
}